adição do qr code e chave pix

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -68,9 +68,9 @@
                     <p>Escaneie o QR Code abaixo no app do seu banco:</p>
                     
                     <!-- Imagem do QR Code que vem do Mercado Pago -->
-                    <img id="img-qrcode" src="" alt="QR Code PIX" style="width: 250px; margin: 20px auto; border-radius: 10px;">
+                    <img id="/static/IMG_2765.jpg" src="" alt="QR Code PIX" style="width: 250px; margin: 20px auto; border-radius: 10px;">
                     
-                    <textarea id="cola-pix" rows="3" style="width: 100%; font-size: 12px; color: #000;" readonly></textarea>
+                    <textarea id="cola-pix" rows="3" style="width: 100%; font-size: 12px; color: #000;" readonly>00020126440014br.gov.bcb.pix0122iagosviana10@gmail.com5204000053039865802BR5916Iago Silva Viana6009Sao Paulo610901227-20062240520daqr18404231525477826304A13A</textarea>
                     <button onclick="copiarPix()" style="background: #333; color: white; border: none; padding: 5px 10px; margin-bottom: 20px; cursor: pointer;">Copiar Código</button>
 
                     <hr style="border-color: #333;">
