Corrigi a imagem do cadeado

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
             <div class="eventos-grid">
 
                 <div class="evento-card">
-                    <img src="/static/cadeado.jpeg.tiff" alt="xxxx">
+                    <img src="/static/cadeado.jpg" alt="xxxx">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="/static/cadeado.jpeg.tiff" alt="Rave Secreta">
+                    <img src="/static/cadeado.jpg" alt="Rave Secreta">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="/static/cadeado.jpeg.tiff" alt="Noite de Samba">
+                    <img src="/static/cadeado.jpg" alt="Noite de Samba">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
