Substituindo imagens pela imagem de cadeado

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
             <div class="eventos-grid">
 
                 <div class="evento-card">
-                    <img src="/static/img/evento4.jpg" alt="Festival de Verão 2026">
+                    <img src="/static/cadeado.jpg" alt="Festival de Verão 2026">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXX</p>
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="/static/img/evento5.jpg" alt="Reveillon Premium">
+                    <img src="/static/cadeado.jpg" alt="Reveillon Premium">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXX</p>
