Várias mudanças de qualidade de vida

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -28,11 +28,10 @@
     </div>
         <nav>
             <a href="/">Home</a>
-            <a href="/eventos">Eventos</a>
         </nav>
 
         <div class="acoes-header">
-        <a href="/login" class="btn-acesso">Acesse / Entrar</a>
+        <a href="/login" class="btn-acesso">Entrar</a>
     </div>
     </header>
 
