--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </nav>
     
     <div class="acoes-header">
-        <a href="/login" class="btn-acesso">Acesse / Entrar</a>
+        <a href="/login" class="btn-acesso">Entrar</a>
     </div>
 </header>
 
