--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -28,7 +28,7 @@
         </nav>
 
         <div class="acoes-header">
-        <a href="/login" class="btn-acesso">Acesse / Entrar</a>
+        <a href="/login" class="btn-acesso">Entrar</a>
     </div>
     </header>
 
