--- a/templates/conta.html
+++ b/templates/conta.html
@@ -147,7 +147,7 @@
         </nav>
 
         <div class="acoes-header">
-            <a href="/login" class="btn-acesso">Acesse / Entrar</a>
+            <a href="/login" class="btn-acesso">Entrar</a>
         </div>
     </header>
 
