--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -31,13 +31,13 @@
     </div>
     
     <nav>
-        <a href="/eventos">Eventos</a>
+        <a href="/">Home</a>
         <a href="#futuras">Futuras Organizações</a>
         <a href="/contato">Contato</a>
     </nav>
     
         <div class="acoes-header">
-        <a href="/login" class="btn-acesso">Acesse / Entrar</a>
+        <a href="/login" class="btn-acesso">Entrar</a>
     </div>
 </header>
 
@@ -50,7 +50,7 @@
             <div class="evento-detalhe">
 
                 <!-- Placeholder para a imagem do evento -->
-                <img src="/static/IMG_2758.jpg" alt="Imagem do Evento" class="banner-evento">
+                <img src="/static/cadeado.jpg" alt="Imagem do Evento" class="banner-evento">
 
                 <div class="info-evento">
                     <h1 class="titulo-evento">Festa Zero800</h1>
