--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -72,7 +72,7 @@
                     <div class="drinks-container">
                         
                         <div class="drink-card">
-                            <img src="/static/Imagem 1.jpg" alt="Gin Tônica" class="drink-photo">
+                            <img src="/static/Imagem.jpg" alt="Gin Tônica" class="drink-photo">
                             <p>ABSOLUT</p>
                         </div>
                         
