--- a/templates/login.html
+++ b/templates/login.html
@@ -28,9 +28,8 @@
     </div>
     
     <nav>
-        <a href="eventos.html">Eventos</a>
-        <a href="#futuras">Futuras Organizações</a>
-        <a href="contato.html">Contato</a>
+        <a href="/">Home</a>
+        <a href="/contato">Contato</a>
     </nav>
     
 </header>
