--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,12 @@
 
         <!-- HERO -->
 <section class="hero">
-    <div class="hero-image" alt="Festa 0800">
-    </div>
+    <video class="hero-video" autoplay muted loop playsinline poster="/static/capa-do-video.jpg">
+        <source src="/static/a981b97b-577d-4e40-a670-793127e827f4 (video-converter.com).mp4" type="video/mp4">
+        Seu navegador não suporta vídeos HTML5.
+    </video>
+
+    <div class="hero-overlay"></div>
 
     <div class="hero-content">
         <h1>Zero800: A Festa do Ano!</h1>
